2006-03-30  Sebastien Pouliot  <sebastien@ximian.com>

	* TestGraphics.cs: Added new test cases translating matrix with 
	different MatrixOrder and for multiplying a non-invertible matrix.

2006-03-28  Sebastien Pouliot  <sebastien@ximian.com>

	* TestGraphics.cs: Add new test cases for clipping.

2006-03-25  Sebastien Pouliot  <sebastien@ximian.com>

	* RegionDataTest.cs: Add test cases for GetRegionData when a region is
	path-based (using bitmaps in libgdiplus) and for regions that had a 
	binary operations applied (i.e. using a path tree in libgdiplus).
	* RegionNonRectTest.cs: Add test cases for GetRegionScans and all
	binary operators (Union, Intersection, Complement, Exclude and Xor)
	on path based regions (using bitmaps in libgdiplus).

2006-02-29  Peter Dennis Bartok  <pbartok@novell.com>

	* TestFont.cs: LOGFONT must be CharSet=Auto to make sure we have
	  the appropriate size on each system

2006-01-27  Sebastien Pouliot  <sebastien@ximian.com>

	* RegionNonRectTest.cs: Updated comments on a test that fails on both
	1.x and 2.0 MS runtime.
	* TestFont.cs: Converted tests to NUnit 2.2 and added descriptions to
	each asserts.

2006-01-26 Boris Kirzner <borisk@mainsoft.com>
	* ColorConverter.cs, TestBitmap.cs, TestIcon.cs, TestIconConverter.cs,
	TestImageConverter.cs, TestPointConverter.cs, TestRectangleConverter.cs,
	TestRegion.cs, TestSizeConverter.cs, TestStringFormat.cs: 
	added #ifdef for TARGET_JVM.

2006-01-23 Boris Kirzner <borisk@mainsoft.com>
	* TestBitmap.cs, TestFont.cs: #ifdef fot TARGET_JVM.	

2006-01-18  Sebastien Pouliot  <sebastien@ximian.com>

	* RegionDataTest.cs: New. Unit tests for RegionData.
	* RegionNonRectTest.cs: New. Unit tests for non-rectangular regions.
	* TestRegion.cs: Added new test cases for empty region and IsInfinite
	behaviour with multiple rectangles / path-rectangle regions.

2006-01-16  Sebastien Pouliot  <sebastien@ximian.com>

	* TestRegion.cs: Mark a test case as NotWorking as it caused a 
	regression in SWF.
